fix: landing height + prevent overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,9 @@
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-hex: #FFFCF0;
+  --body-column-margin: 20px;
+  --landing-container-margin: 40px;
+  --landing-container-height: calc(100vh - var(--landing-container-margin));
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,8 +19,15 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: var(--background-hex);
-  max-width: 1392px;
-  margin: 40px auto;
+  max-width: 95%;
+  margin: var(--body-column-margin) auto;
+}
+
+.landing-container {
+  display: flex;
+  height: var(--landing-container-height);
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* turn off mobile */
